# knock

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json  renovate.json
.claude/: launch.json  settings.json
.github/: settings.yml
.github/workflows/: ci.yml  demo-mongobleed.yml  docs.yml  release-please.yml
deploy/: glue.Dockerfile
deploy/argocd/: root.yaml
deploy/base/: cronjob-gc.yaml  cronjob-reconcile.yaml  job-blast-radius.yaml  job-dt-bootstrap.yaml  job-publish-sbom.yaml  job-scan-attach.yaml  job-seed-incident.yaml  kustomization.yaml  namespace.yaml  rbac-blast-radius.yaml  rbac-dt-bootstrap.yaml  serviceaccount.yaml
deploy/incidents/: debian-xz.Dockerfile  incident-workloads.yaml.tmpl
deploy/scripts/: assert-team-gates.py  dt_assert_clear.py  dt_blast_radius_cve.py  extract-job.py
docs/: design.md  getting-started.md  index.md  roadmap.md  why-houba.md
docs/architecture/: README.md  design.md  workspace.dsl
docs/examples/: README.md  _category_.json  admission.md  attested.md  hardened.md  pending-deletion.md  redis.md  reference.md  retention.md
docs/explanation/: _category_.json  architecture.md  attestations.md  deletion-and-retention.md  features.md  index.md  sbom.md  team-folders.md
docs/how-to/: _category_.json  attach-scan.md  audit-coverage.md  brownfield-drop-in.md  demo-teams.md  gc-scan-referrers.md  index.md  inspect-sbom.md  migrate-from-replication.md  operate-scan-pipeline.md  purge-unused-tags.md  rebuild-and-harden.md  reference-deployment.md  verify-gate.md
docs/reference/: _category_.json  cli.md  command-line-interface.md  config.md  config.schema.json  configuration.md  glossary.md  mirror-policy.md  mirror-policy.schema.json  sarif-ingestion-profile.md  scan-predicate.md  (+1 more)
houba/: config.py  errors.py  logging.py
houba/cli/: gc.py  (+10 more)
hub2hub/: config.py  errors.py  logging.py
knock/: config.py  errors.py  logging.py
presentation/: README.md  houba-fr.md  slides.md
resources/: Dockerfile.template  Dockerfile.tmp  add_sncf_http_sources.sh  add_sncf_https_sources.sh  createJob.groovy.template  default_retention_harbor.json  delete_retention_harbor.json  get_sncf_keyring.sh  install_sncf_keyring.sh  job.properties.template  properties.yml.template  set_timezone.sh  teams_notification.json  teams_notification.json.template  update_keystore.sh
scripts/: blast-radius.sh  demo-gate.sh  demo-mongobleed.sh  dt-bootstrap.py  enqueue-out-digests.py  extract_sbom.py  gen_reference.py  migration-parity-proof.sh  publish-sbom.sh  regis-scan.sh  scan-ack.py  scan-attach.sh  scan-coverage.py  scan-dlq.py  scan-enqueue.py  scan-one.sh  scan-queue-ack.py  scan-queue-reap.sh  scan-queue-reserve.py  scan-reaper.py  scan-reserve.py  scan_queue.py  scan_streams.py  seed-incident.sh  spike-mongobleed.sh  stick-test.sh
tests/: conftest.py
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+601 files in other folders)
