[project]
name = "hub2hub"
version = "0.1.0-dev"
description = "Hub2Hub CLI — mirroring Docker images into SNCF Harbor"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tenacity>=8.3",
    "typer>=0.12",
]

[project.scripts]
h2h = "hub2hub.cli.main:app"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "syrupy>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub2hub"]

[tool.ruff]
line-length = 100
target-version = "py312"
# TODO: retirer cette exclusion une fois le legacy ci/ supprimé (Phase B/C, cf. spec §10).
extend-exclude = ["ci"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]  # assert OK dans tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["hub2hub"]

[[tool.mypy.overrides]]
module = ["hub2hub.adapters.*", "hub2hub.cli.*"]
disallow_untyped_calls = false  # plus laxiste sur les couches I/O

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["hub2hub"]
omit = ["hub2hub/cli/_di.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
