[project]
name = "houba"
version = "0.5.0"
description = "Stamp external OCI images with portable provenance through a hardening policy"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.scripts]
houba = "houba.cli.main:_run"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "jsonschema>=4.26.0",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "syrupy>=4.6",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["houba"]

[tool.ruff]
line-length = 100
target-version = "py312"
# TODO: retirer cette exclusion une fois le legacy ci/ supprimé (Phase B/C, cf. spec §10).
extend-exclude = ["ci"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]  # assert OK dans tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["houba"]

[[tool.mypy.overrides]]
module = ["houba.adapters.*", "houba.cli.*"]
disallow_untyped_calls = false  # plus laxiste sur les couches I/O

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["houba"]
omit = ["houba/cli/_di.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
